test/tests/errors/error-array-non-storeable2.sm
// true
// false
// false
/**/
/**/

program {
    const x: array of proc() = array[1:1]: proc();
}